<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".MainActivity">

    <LinearLayout
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_marginStart="32dp"
            android:layout_marginEnd="32dp"
            android:gravity="center_horizontal"
            android:orientation="vertical"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="1.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.0"
            tools:ignore="MissingConstraints">

        <Button
                android:id="@+id/generatorButton"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/gen" />

        <EditText
                android:id="@+id/inputChar"
                android:layout_width="128dp"
                android:layout_height="wrap_content"
                android:ems="10"
                android:hint="@string/letter"
                android:inputType="textPersonName"
                android:maxLength="1"
                android:maxLines="1"
                android:importantForAutofill="no" />

        <EditText
                android:id="@+id/count"
                android:layout_width="127dp"
                android:layout_height="49dp"
                android:ems="10"
                android:hint="@string/count"
                android:inputType="numberDecimal"
                android:selectAllOnFocus="false"
                tools:layout_editor_absoluteX="87dp"
                tools:layout_editor_absoluteY="170dp"
                android:importantForAutofill="no" />

        <Button
                android:id="@+id/addButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/plus" />

        <ScrollView
                android:layout_width="match_parent"
                android:layout_height="184dp">

            <LinearLayout
                    android:id="@+id/list"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical" />
        </ScrollView>

        <Button
                android:id="@+id/drawButton"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/draw_graph" />
    </LinearLayout>

</android.support.constraint.ConstraintLayout>

